<resources>
    <string name="app_name">Book Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_username">Enter your username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="repeat_password">repeat password</string>
    <string name="phone_number">mobile number</string>
    <string name="full_name">full name</string>
    <string name="please_wait">Please wait ...</string>
    <string name="infor_wrong">username or password is not exactly</string>
    <string name="fail_tryagain">Fail ! Please try again.</string>
    <string name="type_both_username_pass">Type both username and password!</string>
    <string name="guest_loggin">Guest | Login</string>
    <string name="fill_full_infor">Fill out full information</string>
    <string name="username_no_space">username no have white space</string>
    <string name="pass_must_same">password must be same</string>
    <string name="vietnam">Việt Nam</string>
    <string name="customer">Customer</string>
    <string name="search_hint">Search Books, Author, Publisher</string>
    <string name="quote_fun"><![CDATA[Today a Reader & Tomorrow is Leader !]]></string>
    <string name="my_account">My Account</string>
    <string name="no_result_match">No result match!</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="no_description">No description.</string>
    <string name="wishlist">Wishlist</string>
    <string name="account_exist">Account is exist !</string>
    <string name="book_category">Book Category</string>
    <string name="personal">Personal</string>
    <string name="book_publisher">Book Publisher</string>
    <string name="cart">Cart</string>
    <string name="wish_list">Wishlist</string>
    <string name="total_price">Total</string>
    <string name="check_out">Checkout</string>
    <string name="orders">Orders</string>
    <string name="shipping_address">Shipping address</string>
    <string name="account_detail">Account Detail</string>
    <string name="log_out">Log out</string>
    <string name="time">Time:</string>
    <string name="payment">Payment:</string>
    <string name="status">Status:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="quantity_available">Quantity Available:</string>
</resources>
