<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:textColor="#000000"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lb_id_order"
        android:text="ID Order:"/>
    <TextView
        android:textColor="#000000"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id_order"
        android:text="1"
        android:layout_toRightOf="@id/lb_id_order"
        android:layout_marginLeft="10dp"/>
    <RelativeLayout
        android:layout_below="@id/lb_id_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:textColor="#000000"
        android:id="@+id/lb_time"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"/>
    <TextView
        android:layout_alignLeft="@+id/tv_status"
        android:textColor="@color/red"
        android:layout_toRightOf="@+id/lb_time"
        android:textSize="18sp"
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:text="11-11-1111"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#2196F3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_method"
        android:text="PayPal"
        android:textSize="18sp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/lb_payment"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:visibility="gone"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/tv_payment_method"/>

    <TextView
        android:textColor="#000000"
        android:textSize="18sp"
        android:id="@+id/lb_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_below="@id/tv_time"/>
    <TextView
        android:textColor="#4CAF50"
        android:textSize="18sp"
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Progress"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lb_status"
        android:layout_below="@id/tv_time"/>
    </RelativeLayout>
</RelativeLayout>