<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/toolbar"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bg_discount"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="0 %"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imv_thumbnail"
                        android:layout_width="240dp"
                        android:layout_height="320dp"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo_book_default" />

                    <ImageButton
                        android:id="@+id/imb_favorite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_favorite_unselected" />

                    <ImageButton
                        android:id="@+id/imb_share"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="10dp"
                        android:background="@drawable/ic_share_black_48dp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="Tên sách"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_book_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0 VNĐ"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_book_price_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tv_book_name"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/strike_price"
                        android:text="0 VNĐ"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/quantity_available"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/tv_available_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="18sp"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/lb_quantity"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/quantity"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_add_quantity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/bg_button_normal_login"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/btn_add_quantity"
                        android:text="1" />

                    <Button
                        android:id="@+id/btn_sub_quantity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_toLeftOf="@+id/tv_quantity"
                        android:background="@drawable/bg_button_normal_login"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/white"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_to_expand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="+"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_to_expand"
                        android:layout_centerVertical="true"
                        android:paddingRight="10dp"
                        android:text="@string/no_description"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FF9800">

                <Button
                    android:id="@+id/btn_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:drawableLeft="@drawable/ic_add_shopping_cart_white_24dp"
                    android:paddingLeft="20dp"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/pgb_add_to_cart"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary">

                <Button
                    android:id="@+id/btn_buy_now"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:drawableLeft="@drawable/ic_monetization_on_white_24dp"
                    android:paddingLeft="30dp"
                    android:text="@string/buy_now"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/pgb_buy_now"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>